--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+bin/win64/release/libgitapi.dll
+
+bin/win64/release/libgitapi.exp
+
+bin/win64/release/libgitapi.pdb
+
+git_api.gdnlib
+
+git_api.gdns
