Fix line endings in fonts

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,9 @@
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
+
+# Leave the fonts alone
+*.eot binary
+*.ttf binary
+*.woff binary
+*.woff2 binary
